# ecommerce

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  setup_structure.ps1
backend/: celerybeat-schedule  pyproject.toml  requirements.txt
backend/app/: errors.py  main.py  public_files.py  seed_addresses.py  seed_admin.py  seed_catalog.py  seed_inventory.py
backend/app/api/: __init__.py  admin_ui.py  checkout_ui.py  deps.py  webhooks_mp.py
backend/app/common/: money.py
backend/app/core/: rate_limit.py  security.py  settings.py
backend/app/crud/: user_service.py
backend/app/db/: session.py
backend/app/models/: address.py  cart.py  cart_item.py  category.py  daily_category_sales.py  daily_sales.py  inventory_location.py  order.py  order_item.py  order_seq.py  payment_intent.py  product.py  product_price.py  shipment.py  stock_item.py  stock_reservation.py  user.py
backend/app/observability/: counters.py
backend/app/schemas/: address.py  catalog.py  checkout.py  payments.py  user.py
backend/app/services/: alerts.py  cart.py  checkout.py  mp_credentials.py  order_seq.py  payments_mp.py  pricing.py  stock.py
backend/app/workers/: tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 065d05e940fa_catalog_base_fix.py  17fd5055c9a1_create_users_table.py  7f509f60761d_cart_and_stock_base.py  83144a326fb0_catalog_base.py  9a1b2c3d4e5f_v0_7_snapshots_tables.py  a1b2c3d4e5f6_checkout_v0_3_tables.py  b7c8d9e0f1a2_v0_4_add_mp_order_id.py  c1d2e3f4a5b6_v0_4_create_addresses.py  (+3 more)
backend/tests/: test_auth.py
(+107 files in other folders)
